Modify endpoints Rename: /: order.html -> total-order.html New: /order: order.html Remove: /orderlist

--- a/firebase.json
+++ b/firebase.json
@@ -18,8 +18,8 @@
         "destination": "/dashboard.html"
       },
       {
-        "source": "/orderlist",
-        "destination": "/total-order.html"
+        "source": "/order",
+        "destination": "/order.html"
       }
     ],
     "headers": [{
